TEST_PROGRAMS/VALID/07/type_distribute.go
package main
type (
	Point struct {
		x, y float64
	}
	Polar Point
)
