TEST_PROGRAMS/INVALID/14/4051_if_double_empty.go
package x

func main(){
  if () {
  }
}
